<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background_pantalla">

    <ImageView
        android:id="@+id/logo_restaurante"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/_xfo6b"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo_restaurante" />

    <TextView
        android:id="@+id/titulo_restaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_restaurante"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="300dp">


        <Button
            android:id="@+id/boton_entradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_entradas"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/button_color"
            android:textColor="#ffffff"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/boton_platos_principales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_platos_principales"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/button_color"
            android:textColor="#ffffff"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/boton_postres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_postres"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/button_color"
            android:textColor="#ffffff"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/boton_bebidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_bebidas"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/button_color"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>